--- a/style.css
+++ b/style.css
@@ -642,145 +642,201 @@ video#bgvid {
 /*JUNE*/
 
 .eventimage {
-    width: 700px;
+    width: 1400px;
+    height: 1200px;
     position: absolute;
     z-index: -1;
-    margin-left: 50%;
+    opacity: 0.8;
     margin-top: 15%;
     float: left;
     box-shadow: -10px -10px 25px #999999;
 }
 
-.eventimage:hover {
-    transition: 0.2s;
-    z-index: 2;
-}
 
 .eventimage img {
     width: 100%;
 }
 
 .containerjune {
-    width: 85%;
+    width: 100%;
     position: absolute;
     margin-top: 250px;
-    background: #3dd129;
     opacity: 0.8;
-    box-shadow: 10px -10px 25px #999999;
 }
 
-.titlespanishjune {
-    font-family: 'Almendra', sans-serif;
-    font-size: 90px;
-    color: transparent;
-    transition: 0.5s;
-    -webkit-text-stroke: 1px #469b3b;
-    color: #3dd129;
-    line-height: 0.8em;
-    margin-top: 120px;
+.containerjune p{
+    text-align: center;
 }
 
-.titleenglishjune {
+.pagetitle {
     font-family: 'Almendra', sans-serif;
-    margin-top: 300px;
-    font-size: 90px;
+    font-size: 70px;
     color: transparent;
     transition: 0.5s;
-    -webkit-text-stroke: 1px #469b3b;
-    color: #3dd129;
+    -webkit-text-stroke: 1.6px #5c9083;
     line-height: 0.8em;
+    margin-top: 100px;
+}
+
+
+.columnquotejune  {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 19px;
+    line-height: 0.7em;
+    margin-top: 80px;
+    margin-bottom: 100px;
 }
 
 .with {
-    width: 65%;
-    float: left;
-    padding: 8px;
+    width: 100%;
+    font-family: 'Almendra', sans-serif;
+    font-size: 50px;
+    line-height: 1.2em;
+    margin-bottom: 100px; 
+}
+
+.with a {
+    text-decoration: none;
+    color: black;
+}
+
+.with a:hover {
+    text-decoration: underline;
+}
+
+.bottomcontainer {
+    display: -webkit-flex;
+    display: flex;
+    margin: 0 auto;
+    width: 60%;
+}
+
+.flex-item {
+    width: 31%;
+    margin: 10px;
+}
+
+
+.flex-item p {
     font-family: 'Roboto Condensed', sans-serif;
-    font-size: 16px;
-    line-height: 1.8em;
-    margin-right: 10px;
-    margin-bottom: 120px;
-    background: #3dd129;  
-}
-
-.columnquotespanishjune {
-    width: 65%;
+    font-size: 18px;
+    line-height: 1em;
     float: left;
-    padding: 8px;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 16px;
-    line-height: 1.8em;
-    margin-right: 10px;
-    margin-top: 120px;
-    margin-bottom: 120px;
-    background: #3dd129;
+    
 }
 
-.columnquotejune  {
-    width: 65%;
-    float: left;
-    padding: 8px;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 16px;
-    line-height: 1.8em;
-    margin-right: 10px;
-    margin-top: 120px;
-    margin-bottom: 120px;
-    background: #3dd129;
-    position: absolute;
-}
-
-
-.columnquotejune:hover {
-    transition: 0.2s;
-    opacity: 0;
-}
 
 .posterdownloadjune {
-    width: 250px;
-    position: absolute;
-    margin-top: 60%;
-    margin-left: 59%;
-    z-index: 2;
-    box-shadow: -10px -10px 25px #999999;
+    float: left;
+    
 }
 
 
 .posterdownloadjune img {
+    width: 60%;
+    margin-left: 13%;
+}
+
+.address {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 19px;
+    line-height: 0.7em;
+    margin-top: 80px;
+    margin-bottom: 100px;
+}
+
+
+/* AUGUST */
+
+.backgroundaugust {
+    width: 100%;
+    height: auto;
+    margin-left: 0px;
+}
+
+.containeraugust {
+    width: 85%;
+    position: absolute;
+    margin-top: 250px;
+    opacity: 0.8;
+    box-shadow: 10px -10px 25px #EE3F23;
+    background: red; 
+    background: -webkit-linear-gradient(#EE3F23, #F4831F, #F79E80, #D6B63F); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#EE3F23, #F4831F, #F79E80, #D6B63F); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#EE3F23, #F4831F, #F79E80, #D6B63F); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#EE3F23, #F4831F, #F79E80, #D6B63F);
+}
+
+.augustimg {
+    width: 700px;
+    position: absolute;
+    z-index: -1;
+    margin-left: 50%;
+    margin-top: 15%;
+    float: left;
+    box-shadow: -10px -10px 25px #D6B63F;
+}
+
+.augustimg img {
     width: 100%;
 }
 
-.columnjunedates {
-    width: 500px;
+.augustcolumnone {
+    width: 33%;
     float: left;
-    padding: 8px;
-    font-family: 'Almendra-bold', sans-serif;
-    font-size: 30px;
-    line-height: 1.3em;
-    margin-right: 10px;
-    margin-bottom: 120px;
-    margin-top: 645px;
-    background: #3dd129;
-    position: absolute;
+    
 }
 
-.columnjunedates:hover {
-    transition: .2s;
-    opacity: 0;
-}
 
-.columnjunedatesspanish {
-    width: 500px;
+.augustcolumntwo {
+    width: 17%;
     float: left;
-    padding: 8px;
-    font-family: 'Almendra-bold', sans-serif;
-    font-size: 30px;
-    line-height: 1.3em;
-    margin-right: 10px;
-    margin-bottom: 120px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 15px;
+    margin-top: 100px;
+    margin-left: 50px;
+    margin-bottom: 100px;
 }
 
 
+.augustcolumnthree {
+    width: 45%;
+    float: left;
+    margin-top: 100px;
+    font-family: 'Almendra', sans-serif;
+    font-size: 36px;
+    
+}
+
+.titleaugust {
+    font-family: 'Almendra', sans-serif;
+    font-size: 50px;
+    color: transparent;
+    transition: 0.5s;
+    -webkit-text-stroke: 1.6px #914C00;
+    line-height: 1.1em;
+    margin-top: 100px;
+    margin-left: 30px;
+}
+
+.titleaugusttext {
+    font-family: 'Almendra', sans-serif;
+    font-size: 24px;
+    color: #C95D0D;
+    line-height: 1em;
+    margin-top: 100px;
+    margin-left: 30px;
+    margin-bottom: 100px;
+}
+
+.titleaugusttext p {
+    margin-top: 80px;
+}
+
+.titleaugusttext p a{
+    text-decoration: underline;
+    color: #C95D0D;
+}
 
 
 /* COMING SOON */
